force-app/main/default/objects/PayPal_Transaction__c/PayPal_Transaction__c.object-meta.xml
<CustomObject>
    <label>PayPal Transaction</label>
    <nameField>
        <label>PayPal Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PayPal Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>