force-app/main/default/objects/PayPal_Transaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PayPal Transactions</relationshipLabel>
    <relationshipName>PayPal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>