force-app/main/default/objects/PayPal_Transaction__c/fields/Cart_Info__c.field-meta.xml
<CustomField>
    <fullName>Cart_Info__c</fullName>
    <label>Cart Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>