force-app/main/default/objects/PayPal_Transaction__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PayPal Transactions</relationshipLabel>
    <relationshipName>PayPal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>