force-app/main/default/objects/PayPal_Transaction__c/fields/Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee_Amount__c</fullName>
    <label>Fee Amount</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>