force-app/main/default/objects/PayPal_Transaction__c/fields/Reference_id__c.field-meta.xml
<CustomField>
    <fullName>Reference_id__c</fullName>
    <label>Reference _id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>