force-app/main/default/objects/PayPal_Transaction__c/fields/Reference_Id_Type__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id_Type__c</fullName>
    <label>Reference Id Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>