force-app/main/default/objects/PayPal_Transaction__c/fields/Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Amount__c</fullName>
    <label>Transaction Amount</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>