force-app/main/default/objects/PayPal_Transaction__c/fields/Transaction_Classification__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Classification__c</fullName>
    <formula>CASE( Transaction_Event_Code__c, 
  &quot;T0000&quot;, &quot;General: received payment&quot;,
  &quot;T1107&quot;, &quot;Payment refund, initiated by merchant&quot;, 
  &quot;T0400&quot;, &quot;General withdrawal from PayPal account&quot;,
  &quot;T0006&quot;, &quot;PayPal Checkout APIs&quot;,
  &quot;T0013&quot;, &quot;Donation payment&quot;,
  &quot;T0002&quot;, &quot;Subscription payment. Either payment sent or payment received.&quot;,
  &quot;Un-Classified: Please lookup here to classify this transaction: https://developer.paypal.com/docs/transaction-search/transaction-event-codes/&quot;
)</formula>
    <label>Transaction Classification</label>
    <type>Text</type>
</CustomField>