force-app/main/default/objects/PayPal_Transaction__c/fields/Transaction_Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Event_Code__c</fullName>
    <inlineHelpText>PayPal Transaction Classification Code</inlineHelpText>
    <label>Transaction Event Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>