force-app/main/default/objects/PayPal_Transaction__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <externalId>true</externalId>
    <label>Transaction ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>