force-app/main/default/objects/PayPal_Transaction__c/fields/Transaction_Note__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Note__c</fullName>
    <label>Transaction Note</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>