force-app/main/default/objects/PayPal_Transaction__c/fields/Transaction_Subject__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Subject__c</fullName>
    <label>Transaction Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>